# Vettori

./: Idee.txt  README.md
0FunzioniUltili/vmath/: CMakeLists.txt
20Input/: CMakeLists.txt  main.c
20Input/myvect_search/: .myvect_search.c.swp  CMakeLists.txt  myvect_search.h
2dadi/: CMakeLists.txt  main.c
2dadi/dado/: dado.c  dado.h
2dadi/random/: random.h
NumeriPrimi/: main.c
ProdottoScalare/: CMakeLists.txt  main.c
ProdottoScalare/random/: random.h
ProdottoScalare/vmath/: vmath.c  vmath.h
RiordinaVettori/: main.c
RiordinaVettori/myvect/: myvect.c  myvect.h
Selection_sort/: CMakeLists.txt  main.c
Selection_sort/myvect/: .myvect.c.swo  CMakeLists.txt  myvect.h
Selection_sort/vsort/: .vsort.c.swp  CMakeLists.txt  vsort.c  vsort.h
bubble_sort/: bubble_sort.c
bucket_sort/: CMakeLists.txt  main.c
bucket_sort/mymatrix/: CMakeLists.txt  mymatrix.c  mymatrix.h
bucket_sort/myvect_sort/: .myvect_sort.c.swo  .myvect_sort.c.swp  myvect_sort.c  myvect_sort.h
dado/: .Makefile.swp  CMakeLists.txt  Makefile  dado.c  dado.h  main  main.c
istogrammi/: CMakeLists.txt  main.c
matrici/: Makefile  matrici.c
matrici_funzioni/: matrici.c
myvect/: CMakeLists.txt  main.c
myvect_math/: CMakeLists.txt  main.c
reverse_input/: main.c
ricerca_binaria/: CMakeLists.txt  ricerca_binaria.c
ricerca_binaria/myvect_math/: myvect_math.c
ricerca_binaria/myvect_sort/: myvect_sort.c
ricerca_lineare/: CMakeLists.txt  ricerca_lineare.c
ricerca_lineare/myvect_search/: myvect_search.c
sizeof/: Makefile  sizeof.c
stringhe/: Makefile  stringhe.c
(+18 files in other folders)
